--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-minimal-pie-chart": "^8.0.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
