--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-linechart": "^1.1.12",
     "react-minimal-pie-chart": "^8.0.0"
   },
   "devDependencies": {
